--- a/package.json
+++ b/package.json
@@ -8,18 +8,30 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~39.0.2",
-    "expo-status-bar": "~1.0.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
-    "react-native-web": "~0.13.12"
+    "@expo-google-fonts/poppins": "^0.1.0",
+    "@types/styled-components": "^5.1.4",
+    "expo": "~38.0.8",
+    "expo-font": "~8.2.1",
+    "expo-location": "~8.2.1",
+    "expo-status-bar": "^1.0.2",
+    "intl": "^1.2.5",
+    "react": "~16.11.0",
+    "react-dom": "~16.11.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-geocoder": "^0.5.0",
+    "react-native-gesture-handler": "^1.7.0",
+    "react-native-google-places-autocomplete": "^1.8.0",
+    "react-native-maps": "0.27.1",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-web": "~0.11.7",
+    "styled-components": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
-    "@types/react": "~16.9.35",
-    "@types/react-dom": "~16.9.8",
-    "@types/react-native": "~0.63.2",
+    "@babel/core": "^7.8.6",
+    "@types/node": "^14.6.0",
+    "@types/react": "~16.9.41",
+    "@types/react-native": "~0.62.13",
+    "babel-plugin-inline-dotenv": "^1.6.0",
     "typescript": "~3.9.5"
   },
   "private": true
